fix: Pending contributions are marked as deleted when they need to becanceled - MEED-7461 - Meeds-io/meeds#2379 (#1733)
Ensure the cancellation process for pending contributions.